# codebase

./: .gitignore  Doxyfile  IPIF1-Configuration_scf_MRBTS-1763_98AL026-MITRENA-GLN_20250225-1426.xml  IPIF2-Configuration_scf_MRBTS-1763_98AL026-MITRENA-GLN_20250225-1426.xml  README.md  cscope.in.out  cscope.out  cscope.po.out  select_worker  select_worker.c  set_new_environ.history  tags
AI_Programming/: helloworld.cpp
start_ossw/: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac  libtool
start_ossw/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
start_ossw/cmexample1/: Makefile  Makefile.am  Makefile.in  cmexample1.json  cmexample1.json.in  libcmexample1.la  libcmexample1.pc  libcmexample1.pc.in  libcmexample1plugins.la  libcmexample1protobuf.la
start_ossw/cmexample1/.libs/: libcmexample1.la  libcmexample1.lai  libcmexample1.so.0.0.0  libcmexample1.so.0.0.0T  libcmexample1plugins.la  libcmexample1plugins.lai  libcmexample1plugins.soT  libcmexample1protobuf.la  libcmexample1protobuf.lai  libcmexample1protobuf.so.0  libcmexample1protobuf.so.0.0.0
start_ossw/cmexample1/include/: foo.hpp  fooconfiguration.hpp
start_ossw/cmexample1/include/plugins/: foodataparserplugin.hpp  fookeyformatter.hpp  foorequesthandlerplugin.hpp  foovalidatorplugin.hpp
start_ossw/cmexample1/protobuf/cmexample1domain/databasevalues/: foodescription.pb.cc  foodescription.pb.h  foodescription.pb.lo  foodescription.proto  foovalues.pb.cc  foovalues.pb.h  foovalues.pb.lo  foovalues.proto
start_ossw/cmexample1/protobuf/cmexample1domain/requestinterface/: deletefoorequest.pb.cc  deletefoorequest.pb.h  deletefoorequest.pb.lo  deletefoorequest.proto  foo.pb.cc  foo.pb.h  foo.pb.lo  foo.proto  fooiddescriptionpair.pb.cc  fooiddescriptionpair.pb.h  fooiddescriptionpair.pb.lo  fooiddescriptionpair.proto  readalldescriptionsresponse.pb.cc  readalldescriptionsresponse.pb.h  readalldescriptionsresponse.pb.lo  readalldescriptionsresponse.proto  readfoorequest.pb.cc  readfoorequest.pb.h  readfoorequest.pb.lo  readfoorequest.proto  readfooresponse.pb.cc  readfooresponse.pb.h  readfooresponse.pb.lo  readfooresponse.proto  readrequest.pb.cc  readrequest.pb.h  readrequest.pb.lo  readrequest.proto  readresponse.pb.cc  readresponse.pb.h  readresponse.pb.lo  readresponse.proto  readwriterequest.pb.cc  readwriterequest.pb.h  readwriterequest.pb.lo  readwriterequest.proto  readwriteresponse.pb.cc  readwriteresponse.pb.h  readwriteresponse.pb.lo  readwriteresponse.proto  (+4 more)
start_ossw/cmexample1/src/: fooconfiguration.cpp  libcmexample1_la-fooconfiguration.lo
start_ossw/cmexample1/src/.deps/: libcmexample1_la-fooconfiguration.Plo
start_ossw/cmexample1/src/plugins/: foodataparserplugin.cpp  fookeyformatter.cpp  foorequesthandlerplugin.cpp  foovalidatorplugin.cpp  libcmexample1plugins_la-foodataparserplugin.lo  libcmexample1plugins_la-fookeyformatter.lo  libcmexample1plugins_la-foorequesthandlerplugin.lo  libcmexample1plugins_la-foovalidatorplugin.lo
start_ossw/cmexample1/src/plugins/.deps/: libcmexample1plugins_la-foodataparserplugin.Plo  libcmexample1plugins_la-fookeyformatter.Plo  libcmexample1plugins_la-foorequesthandlerplugin.Plo  libcmexample1plugins_la-foovalidatorplugin.Plo
start_ossw/cmexample2/: Makefile  Makefile.am  Makefile.in  cmexample2.json  cmexample2.json.in  libcmexample2.la  libcmexample2.pc  libcmexample2.pc.in  libcmexample2plugins.la  libcmexample2protobuf.la
start_ossw/cmexample2/.libs/: libcmexample2.la  libcmexample2.lai  libcmexample2.so.0  libcmexample2.so.0.0.0  libcmexample2.so.0.0.0T  libcmexample2plugins.la  libcmexample2plugins.lai  libcmexample2plugins.soT  libcmexample2protobuf.la  libcmexample2protobuf.lai  libcmexample2protobuf.so.0  libcmexample2protobuf.so.0.0.0
start_ossw/cmexample2/include/: town.hpp
start_ossw/cmexample2/include/plugins/common/: buildings.hpp  citizens.hpp  keyparser.hpp
start_ossw/cmexample2/include/plugins/dataparser/: towndataparserplugin.hpp
start_ossw/cmexample2/include/plugins/requesthandler/: townrequesthandlerplugin.hpp
start_ossw/cmexample2/include/plugins/validator/: townvalidatorplugin.hpp
start_ossw/cmexample2/protobuf/cmexample2domain/databasevalues/: building.pb.cc  building.pb.h  building.pb.lo  building.proto  citizen.pb.cc  citizen.pb.h  citizen.pb.lo  citizen.proto  infrastructure.pb.cc  infrastructure.pb.h  infrastructure.pb.lo  infrastructure.proto  value.pb.cc  value.pb.h  value.pb.lo  value.proto
start_ossw/cmexample2/protobuf/cmexample2domain/requestinterface/: addbuildingrequest.pb.cc  addbuildingrequest.pb.h  addbuildingrequest.pb.lo  addbuildingrequest.proto  addcitizenrequest.pb.cc  addcitizenrequest.pb.h  addcitizenrequest.pb.lo  addcitizenrequest.proto  clearallrequest.pb.cc  clearallrequest.pb.h  clearallrequest.pb.lo  clearallrequest.proto  deletebuildingrequest.pb.cc  deletebuildingrequest.pb.h  deletebuildingrequest.pb.lo  deletebuildingrequest.proto  deletecitizenrequest.pb.cc  deletecitizenrequest.pb.h  deletecitizenrequest.pb.lo  deletecitizenrequest.proto  readcitizensresponse.pb.cc  readcitizensresponse.pb.h  readcitizensresponse.pb.lo  readcitizensresponse.proto  readinfrastructureresponse.pb.cc  readinfrastructureresponse.pb.h  readinfrastructureresponse.pb.lo  readinfrastructureresponse.proto  readrequest.pb.cc  readrequest.pb.h  readrequest.pb.lo  readrequest.proto  readresponse.pb.cc  readresponse.pb.h  readresponse.pb.lo  readresponse.proto  readtownsummaryresponse.pb.cc  readtownsummaryresponse.pb.h  readtownsummaryresponse.pb.lo  readtownsummaryresponse.proto  (+8 more)
start_ossw/cmexample2/src/: libcmexample2_la-town.lo  town.cpp
start_ossw/cmexample2/src/.deps/: libcmexample2_la-town.Plo
start_ossw/cmexample2/src/plugins/common/: buildings.cpp  citizens.cpp  keyparser.cpp  libcmexample2plugins_la-buildings.lo  libcmexample2plugins_la-citizens.lo  libcmexample2plugins_la-keyparser.lo
start_ossw/cmexample2/src/plugins/dataparser/: libcmexample2plugins_la-towndataparserplugin.lo  towndataparserplugin.cpp
(+1070 files in other folders)
